trunk/Archive2/e6/af023ced90d314/output
main.cpp: In function 'int main()':
main.cpp:22:10: error: 'void UniformBuffer<Variable<First>, Variable<Args>...>::f() [with First = int; Args = {double, float}]' is private
     void f();
          ^
main.cpp:28:10: error: within this context
     ub.f(); // provoke error to show the deduced types First and Args...
          ^
